--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -8,5 +8,8 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data source=store.db"
+  },
+  "JWTSettings": {
+    "TokenKey": "9@2H8e94/*%3mjCjQq+u3WAKXkg!uU%Yr~##Z,2K"
   }
 }
